--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-
+<head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://brieeikeseth.github.io/challenge-1/style.css">
     <title>website</title>
+</head>
 
 <!--header-->
 <body>
@@ -79,7 +80,6 @@
             </p>
         </div>
     </aside>
-    <!--end benefits-->
     
     <!--footer-->
     <footer class="footer">
@@ -90,6 +90,4 @@
         </p>
     </footer>
 </body>
-<!--end footer-->
-
 </html>
